[build-system]
requires = ["poetry-core", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "zero-shot-replication"
version = "0.1.0"
description = "Zero-Shot Replication Framework"
authors = ["Owen Colegrove <owen@emergentagi.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
black = "^23.3.0"
openai = "0.27.8"
python-dotenv = "^1.0.0"
evalplus = "^0.1.6"
pandas = "^2.0.3"
leetcode_env = { path = "zero_shot_replication/evals/leetcode_hard_gym" }
python-leetcode = "1.2.1"
astunparse = "1.6.3"
anthropic = "^0.3.10"
numpy = "^1.25.2"

[tool.poetry.group.dev.dependencies]
sourcery = "^1.6.0"
pre-commit = "^3.3.3"
mypy = "^1.5.1"
types-requests = "^2.31.0.2"
types-attrs = "^19.1.0"
isort = "5.12.0"
flake8 = "6.1.0"
yapf = "0.40.1"

[tool.black]
line-length = 79

[tool.mypy]
ignore_missing_imports = true
exclude = 'zero_shot_replication/evals/leetcode_hard_gym'

[tool.flake8]
ignore = ["E501", "W503"]
exclude = 'zero_shot_replication/evals/leetcode_hard_gym'

