[build-system]
requires = ["poetry-core", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "automata"
version = "0.1.0"
description = "Automata: The Self-Coding Machine"
authors = ["Owen Colegrove <owen@emergentagi.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
colorlog = "6.7.0"
numpy = "1.25.2"
openai = "0.27.8"
pydantic = "^1.9.0"
python-dotenv = "1.0.0"
termcolor = "2.3.0"
tiktoken = "0.4.0"
requests = "^2.31.0"
sympy = "^1.12"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "5.12.0"
flake8 = "6.1.0"
mypy = "^1.5.1"
pre-commit = "^3.3.3"
types-requests = "^2.31.0.2"
types-attrs = "^19.1.0"
sourcery = "^1.6.0"
yapf = "0.40.1"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
  )/
)
'''

[tool.mypy]
# other mypy configurations go here
# uncomment if this is being really annoying again
ignore_missing_imports = true
exclude = '(scip-python|__pycache__|local_tasks|sample_modules|playground|leetcode_hard_gym|evalplus)/'

[[tool.mypy.overrides]]
module = "pytz.*"
ignore_missing_imports = true

[tool.coverage.html]
directory = "htmlcov/"

[tool.flake8]
ignore = ["E501", "W503"]

[tool.pyright]
reportGeneralTypeIssues = true
reportMissingTypeStubs = false
useLibraryCodeForTypes = true
